tests/tooling/fixtures/native/recovery/negative/negative_for_parser_missing_rparen.objc3
// Expected diagnostic code(s): O3P109, O3P100.
module NegativeForParserMissingRParen;

fn main() -> i32 {
  for (let i = 0; i < 3; i = i + 1 {
    let x = i;
  }
  return 0;
}
